// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheetManager should append style to given target 1`] = `
<html>
  <head />
  <body>
    <style
      type="text/css"
      data-emotion="styled"
    >
      .sc-a {}
    </style>
    <style
      type="text/css"
      data-emotion="styled"
    >
      .b{color:palevioletred;}
    </style>
  </body>
</html>
`;

exports[`StyleSheetManager should apply styles to appropriate targets for nested StyleSheetManagers 1`] = `
<head>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .sc-a {}
  </style>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .d{color:red;}
  </style>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .sc-b {}
  </style>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .e{color:blue;}
  </style>
</head>
`;

exports[`StyleSheetManager should apply styles to appropriate targets for nested StyleSheetManagers 2`] = `
<body>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .sc-c {}
  </style>
  <style
    type="text/css"
    data-emotion="styled"
  >
    .f{color:green;}
  </style>
</body>
`;

exports[`StyleSheetManager ssr should extract CSS outside the nested StyleSheetManager 1`] = `"<div data-reactroot=\\"\\"><h1 class=\\"sc-a c\\"></h1><div></div></div>"`;

exports[`StyleSheetManager ssr should extract CSS outside the nested StyleSheetManager 2`] = `"<style data-styled-components=\\"sc-a c\\">.sc-a {}.c{color:red;}</style>"`;
